# atlys

./: .gitignore
constraints/: clock.ucf  ddr2.ucf  ddr2_controller.ucf  fpga.ucf
hex/: AOC.hex
host/: CMakeLists.txt  main.cpp  uart.cpp  uart.h
libraries/axis/: axis_adapter.v  axis_async_fifo.v  axis_async_fifo_adapter.v  axis_fifo.v
libraries/ddr2/: ddr2_controller.v  infrastructure.v  memc_wrapper.v
libraries/ethernet/: arp_eth_rx.v  arp_eth_tx.v  axis_gmii_rx.v  axis_gmii_tx.v  eth_axis_rx.v  eth_axis_tx.v  lfsr.v
libraries/hdmi/: decode.v  dvi_decoder.v  dvi_top.v  hdmi_decoder.v  hdmi_top.v
libraries/ram/: ram.v  ram_sim.v
libraries/uart/: rxuart.v  txuart.v
prjs/atlys/: auto_project.ipf  auto_project_1.ipf  impact_impact.xwbt  usage_statistics_webtalk.html  webtalk_impact.xml
rtl/: ddr_ctrl.v  ddr_test.v  edid_rom.v  eth_pack.v  eth_pack_fifo.v  fpga.v  fpga_core.v  hdmi_rx.v  rgb_to_ddr.v  rgb_to_ddr_fifo.v  uart_control.v  uart_control_fifo.v
scripts/: udp_test.py
tb/: bench_top.v
tb/ddr2_bench/: ddr2.v  ddr2_parameters.vh
